[gd_scene load_steps=15 format=3 uid="uid://cuhl4onv4df40"]

[ext_resource type="Script" path="res://scripts/props/bird.gd" id="1_sh1li"]
[ext_resource type="AnimationLibrary" uid="uid://brebaqcc2q30i" path="res://scenes/props/bird.tres" id="2_moytv"]
[ext_resource type="Texture2D" uid="uid://cxonbiyobii1" path="res://assets/images/particle/bird_fly_left.png" id="2_u4ily"]
[ext_resource type="Texture2D" uid="uid://b8sbhw87orqsu" path="res://assets/images/particle/bird_fly.png" id="3_0ljcw"]
[ext_resource type="Texture2D" uid="uid://5enjsrrvtv4k" path="res://assets/images/spritesheet/world_1_decoration2.png" id="4_asfbb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_urjn1"]
atlas = ExtResource("2_u4ily")
region = Rect2(0, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_uihoc"]
atlas = ExtResource("2_u4ily")
region = Rect2(9, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8lu8"]
atlas = ExtResource("3_0ljcw")
region = Rect2(0, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4cki"]
atlas = ExtResource("3_0ljcw")
region = Rect2(9, 0, 9, 9)

[sub_resource type="SpriteFrames" id="SpriteFrames_afrvt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_urjn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uihoc")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8lu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4cki")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_5ndd6"]
atlas = ExtResource("4_asfbb")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifoeb"]
atlas = ExtResource("4_asfbb")
region = Rect2(32, 64, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_hi8i6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ndd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifoeb")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s4f2e"]
size = Vector2(83.1332, 50.9378)

[node name="Bird" type="Node2D"]
position = Vector2(56, 40)
script = ExtResource("1_sh1li")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
"": ExtResource("2_moytv")
}

[node name="AnimatedBirdRight" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_afrvt")
animation = &"left"

[node name="AnimatedBirdLeft" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_afrvt")
animation = &"right"

[node name="Static" type="AnimatedSprite2D" parent="."]
position = Vector2(0.253647, -0.165565)
sprite_frames = SubResource("SpriteFrames_hi8i6")
frame_progress = 0.627948

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color(1, 1, 1, 0.054902)
position = Vector2(-1, 4.04096)
scale = Vector2(0.601444, 0.78688)
shape = SubResource("RectangleShape2D_s4f2e")
debug_color = Color(0, 0.574, 0.82, 1)

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
